[project]
name = "simplesim"
version = "0.1.0"
description = "Running"
authors = [
    {name = "RamonOliveira",email = "ramonoliveira10@hotmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "simpy (>=4.1.1,<5.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
