[tool.poetry]
name = "simplesim"
version = "0.1.0"
description = ""
authors = ["Ramon Oliveira"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
simpy = "^4.0"
matplotlib = "^3.8"
pandas = "^2.3.2"
networkx = "^3.2"
pyyaml = "^6.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"